k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediavault-backend-deployment
  labels:
    app: mediavault-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediavault-backend
  template:
    metadata:
      labels:
        app: mediavault-backend
    spec:
      containers:
        - name: mediavault-backend
          image: oxow/mediavault-backend:1.0.17
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /var/data
              name: mediavault-db-storage
            - mountPath: /usr/src/app/uploads
              name: mediavault-db-storage
              subPath: uploads
      volumes:
        - name: mediavault-db-storage
          persistentVolumeClaim:
            claimName: mediavault-db-pvc
