k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mediavault-backend-service
spec:
  selector:
    app: mediavault-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
