k8s/backoffice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mediavault-backoffice-service
spec:
  selector:
    app: mediavault-backoffice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
