k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mediavault-frontend-service
spec:
  selector:
    app: mediavault-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
